update select.html, and update nginx.conf for new html

--- a/www/www/www/select.html
+++ b/www/www/www/select.html
@@ -5,7 +5,7 @@
 <script>
 $(document).ready(function(){
 
-	$.getJSON('http://localhost:8000/getPersons', function(data) {
+	$.getJSON('https://localhost/getPersons', function(data) {
 	      var table='<table border="1">';
 	      /* loop over each object in the array to create rows*/
 	      $.each( data, function( index, item){
